refactoring after review

--- a/SpringTutorial/Storyboards/Base.lproj/Main.storyboard
+++ b/SpringTutorial/Storyboards/Base.lproj/Main.storyboard
@@ -51,7 +51,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <action selector="runButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="9ri-UR-7Rf"/>
+                                    <action selector="runButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4TR-Kz-ix4"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -69,7 +69,6 @@
                     <connections>
                         <outlet property="animationView" destination="cDo-sc-H4Q" id="Sbx-P7-Dbf"/>
                         <outlet property="presetInfoLabel" destination="Exq-kH-ARG" id="Xr0-8O-7Ve"/>
-                        <outlet property="runButton" destination="n5v-ET-223" id="Pdp-uC-uRX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
